Версия к показу с инициализацией базовых пользователей
