# lab2/Travel_companion_search_service/user_service/main.py
@@ -1,13 +1,14 @@
 from fastapi import FastAPI
 from fastapi import APIRouter, Depends, HTTPException, status
 from pydantic import BaseModel
+from sqlalchemy import or_
 from sqlalchemy.orm import Session
 import httpx
 import os
 from typing import List
 from auth import validate_token
 from database import get_db, engine
-import userModal
+import userModal as userModal
 
 class UserInfo(BaseModel):
     username: str
@@ -63,6 +64,17 @@ async def create_user(user: UserCreate, db: Session = Depends(get_db)):
     db.refresh(new_user)
     return new_user
 
+@app.get("/get_user_by_mask", response_model=list[UserResponse])
+def get_user_by_mask(mask: str = '', db: Session = Depends(get_db), _: userModal.User = Depends(validate_token)):
+    return db.query(userModal.User).filter(or_(userModal.User.username.ilike(f"%{mask}%"), userModal.User.full_name.ilike(f"%{mask}%"))).all()
+
+@app.get("/login/{login}",  response_model=UserResponse)
+async def get_user_by_login(login: str, db: Session = Depends(get_db), _ = Depends(validate_token)):
+    user = db.query(userModal.User).filter(userModal.User.username == login).first()
+    if not user:
+        raise HTTPException(status_code=404, detail="User not found")
+    return user
+
 @app.get("/", response_model=List[UserResponse])
 async def get_all_users(db: Session = Depends(get_db), _ = Depends(validate_token)):
     return db.query(userModal.User).all()
@@ -73,13 +85,6 @@ async def get_user(user_id: int, db: Session = Depends(get_db), _ = Depends(vali
 
     user = db.query(userModal.User).filter(userModal.User.id == user_id).first()
 
-    if not user:
-        raise HTTPException(status_code=404, detail="User not found")
-    return user
-
-@app.get("login/{login}",  response_model=UserResponse)
-async def get_user_by_login(login: str, db: Session = Depends(get_db), _ = Depends(validate_token)):
-    user = db.query(userModal.User).filter(userModal.User.username == login).first()
     if not user:
         raise HTTPException(status_code=404, detail="User not found")
     return user
@@ -107,7 +112,3 @@ async def delete_user(user_id: int, db: Session = Depends(get_db), _ = Depends(v
     db.delete(user)
     db.commit()
     return {"message": "User deleted successfully"}
-
-# @router.get("/get_user_by_mask", response_model=list[schemas.User])
-# def get_user_by_mask(mask: str = '', db: Session = Depends(get_db), _: userModal.User = Depends(get_current_user)):
-#     return db.query(userModal.User).filter(or_(userModal.User.name.ilike(f"%{mask}%"), userModal.User.lastname.ilike(f"%{mask}%"))).all()
